--- a/SPADSBO/SADSUI/SADSUI.csproj
+++ b/SPADSBO/SADSUI/SADSUI.csproj
@@ -62,6 +62,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
+    <Reference Include="MySql.Data.CF">
+      <HintPath>..\Components\MySQL-Plugin-1.0\lib\android\MySql.Data.CF.dll</HintPath>
+    </Reference>
     <Reference Include="SQLite-net, Version=1.0.9.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\sqlite-net-pcl.1.0.11\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\SQLite-net.dll</HintPath>
     </Reference>
@@ -70,6 +73,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
     <Reference Include="Xamarin.Android.Support.v4">
@@ -98,6 +102,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="ReportAccident.cs" />
     <Compile Include="Resources\DataHandler\DataBase.cs" />
+    <Compile Include="Resources\DataHandler\DataHandler_MySQL.cs" />
     <Compile Include="Resources\Modell\Keys.cs" />
     <Compile Include="Resources\Modell\Users.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
